--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.19.0",
     "@stackframe/stack": "^2.8.51",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
